--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,96 +1,65 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:gravity="center">
-
     <LinearLayout
-        android:orientation="vertical"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context=".MainActivity"
         android:layout_width="250dp"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:layout_gravity="center">
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/myAppTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="My Nanodegree App!"
-            android:id="@+id/myAppTitle"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_marginBottom="10dp" />
+            android:text="My Nanodegree App!"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <Button
-            android:onClick="sendMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Spotify Streamer"
             android:id="@+id/spotifyStreamerButton"
+            style="@style/MainButton"
             android:layout_below="@+id/myAppTitle"
-            android:layout_centerHorizontal="true"
-            android:backgroundTint="#F08C35"
-            android:layout_margin="5dp" />
+            android:text="Spotify Streamer" />
 
         <Button
-            android:onClick="sendMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Scores App"
             android:id="@+id/scoresAppButton"
+            style="@style/MainButton"
             android:layout_below="@+id/myAppTitle"
-            android:layout_centerHorizontal="true"
-            android:backgroundTint="#F08C35"
-            android:layout_margin="5dp" />
+            android:text="Scores App" />
 
         <Button
-            android:onClick="sendMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Library App"
             android:id="@+id/libraryAppButton"
+            style="@style/MainButton"
             android:layout_below="@+id/myAppTitle"
-            android:layout_centerHorizontal="true"
-            android:backgroundTint="#F08C35"
-            android:layout_margin="5dp" />
+            android:text="Library App" />
 
         <Button
-            android:onClick="sendMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Built it Bigger"
             android:id="@+id/buildItBiggerButton"
+            style="@style/MainButton"
             android:layout_below="@+id/myAppTitle"
-            android:layout_centerHorizontal="true"
-            android:backgroundTint="#F08C35"
-            android:layout_margin="5dp" />
+            android:text="Built it Bigger" />
 
         <Button
-            android:onClick="sendMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="XYZ Reader"
             android:id="@+id/xyzReaderButton"
+            style="@style/MainButton"
             android:layout_below="@+id/myAppTitle"
-            android:layout_centerHorizontal="true"
-            android:backgroundTint="#F08C35"
-            android:layout_margin="5dp" />
+            android:text="XYZ Reader" />
 
         <Button
-            android:onClick="sendMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Capston: My Own App"
             android:id="@+id/capstonButton"
+            style="@style/MainButton"
             android:layout_below="@+id/myAppTitle"
             android:layout_centerHorizontal="true"
-            android:backgroundTint="#CD0E3E"
             android:layout_margin="5dp"
+            android:backgroundTint="@color/udacity_red"
+            android:text="Capston: My Own App"
             android:textColor="#ffffff" />
     </LinearLayout>
-
-
-</RelativeLayout>
